# ChangeLog for dev-libs/glib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.372 2009/07/09 20:19:31 eva Exp $

*glib-2.20.4 (09 Jul 2009)

  09 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org> -glib-2.20.2.ebuild,
  +glib-2.20.4.ebuild:
  Version bump. Bug fixes and translation updates.

*glib-2.20.3 (08 Jun 2009)

  08 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -glib-2.16.6-r1.ebuild, -glib-2.20.1.ebuild, -glib-2.20.1-r1.ebuild,
  +glib-2.20.3.ebuild:
  Bump to 2.20.3. Bug fixes and translation updates. Define XDG environment
  variable for tests since they might not be present even when
  xdg-utils-1.0.2-r3 is installed, bug #269155.

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org> glib-2.20.2.ebuild:
  Remove unused patch.

*glib-2.20.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +glib-2.20.2.ebuild:
  Bump to 2.20.2. Bug fixes.

*glib-2.20.1-r1 (04 May 2009)
*glib-2.18.4-r2 (04 May 2009)

  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/glib-2.18.4-gcc44.patch, +files/glib-2.20.1-gio-unref.patch,
  +glib-2.18.4-r2.ebuild, +glib-2.20.1-r1.ebuild:
  Fix gio unref, bug #260301. Fix compilation of glib-2.18 with gcc 4.4, bug
  #264686.

*glib-2.20.1 (04 May 2009)

  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +glib-2.20.1.ebuild:
  Bump to 2.20.1. Update internal copy of libprcre to 7.8, gio and
  GHashTable enhancements.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> glib-2.18.4-r1:
  Stable for HPPA (bug #260063).

  19 Apr 2009; Mart Raudsepp <leio@gentoo.org> -glib-2.16.5.ebuild,
  -glib-2.16.6.ebuild, -glib-2.18.4.ebuild:
  Remove old redundant security vulnerable revisions

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> ChangeLog:
  Stable on sparc, bug #260063

  26 Mar 2009; Raúl Porcel <armin76@gentoo.org> glib-2.16.6-r1.ebuild,
  glib-2.18.4.ebuild, glib-2.18.4-r1.ebuild: