@@ -27,10 +27,12 @@ DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 S
 DIST glib-2.18.4.tar.bz2 4809051 RMD160 c47a71708fd13ade70d72d3443799d3e74a0459d SHA1 3e21395c6980e3970d5260b46ecb6b87f2482c61 SHA256 6aeb2c845e9fdc388943acdaba2f6357e3007c5ffaa8d666904679cfb40de100
 DIST glib-2.20.3.tar.bz2 5008689 RMD160 75a1bede14759d3b7bc5ca320d2a094d242bc6dc SHA1 9cc9dc579f790d87dacc21413aec6600b9eccfce SHA256 37f098617c2fac11eee4c6289d576300abd0a01825d4c809462f5b698d1127b0
 DIST glib-2.20.4.tar.bz2 5035410 RMD160 e9dbefd8d0f94ead3dfddeb059eb5ee4b319fa7c SHA1 a0cee2b75bb485de926fa43b33887adc8f9c19bb SHA256 af709f0eabfbbfa5c59a02764ca1dd5e6509bbe7fb67a474b2c448bda7b06fb9
+DIST glib-2.20.5.tar.bz2 5037738 RMD160 c71ccaaf0a196e21e144041ec3286db18a03a960 SHA1 19e2b2684d7bc35a73ff94eb7fd15fc70cc6f292 SHA256 88f092769df5ce9f784c1068a3055ede00ada503317653984101d5393de63655
 EBUILD glib-1.2.10-r5.ebuild 1760 RMD160 0fb063af5bd480117c457cc2414b2fe4860d69af SHA1 520a0ade993bc80f188702ef8c04ab52282064fb SHA256 99c57dbca1acca07e81d9f8566c54fbf92b389b2e860774467ce8bdfb847556f
 EBUILD glib-2.18.4-r1.ebuild 4088 RMD160 726cd92c0810dfe2525f195b79d7e898d8f616d2 SHA1 fe0d7b773eb7652cd985c0f7727b61076bfafaea SHA256 42b02651cc75163e42a44e5668c96d3107b96dbdfc08234a6595c5f065c88569
 EBUILD glib-2.18.4-r2.ebuild 4283 RMD160 012547a980e62038d1b794b0f8daf6d232b4734b SHA1 258c5f700bcfebdb850381b40f0e5b0b47fb6ede SHA256 f1688137643f3433e5c8f994321423d5f28f94d5bc75b7dd3abddbc03b7200dc
 EBUILD glib-2.20.3.ebuild 4118 RMD160 185dce5bf5799dabd68411627a2ff9169be8853d SHA1 24ad4d896f2fa5b2bf304d045ec9cf18488b4d94 SHA256 5d36b2ba25b2fe42b09b60fc5daf108efd79c5101deeb64059128c7b7b013d81
 EBUILD glib-2.20.4.ebuild 4172 RMD160 198185c90d27de37a29394bcc4aa539e0fbcf7e7 SHA1 ad019994e8c412d7b3dda84d229b07ba294c44bb SHA256 d5821338832536a125bc3640e04ff1af1c621458fa91138e9f0eefc4ebce24ed
-MISC ChangeLog 45945 RMD160 fef32427ce304002704a97f57fdba16f4a008c5c SHA1 08d247a18d8643909b61d4678c740dc0ba39370b SHA256 e750e843eb81105852a36f726a6b55d43ceb656fa2ba065a9f21a8ef868cba86
+EBUILD glib-2.20.5.ebuild 4176 RMD160 04744b85c145d44f39d38d1465877c6ee83a6e72 SHA1 e57d00c94e6b3160bd67415d4f12b1367df9a587 SHA256 a6c45ebe490d8275ee0ff2d99d079be8d22d86da3d950d0e63ed265f7e8c78fd
+MISC ChangeLog 46103 RMD160 3c9ca95d887968601fc108d1f5f872a3c0dde649 SHA1 105bfb46f7e4552bba952859996b055d3af5e0ef SHA256 e02df20465ceb36096fe7835019fc9dd2fadd25db71357cb26772e588a12c8d5
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
