@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.372 2009/07/09 20:19:31 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.373 2009/09/01 12:58:53 mrpouet Exp $
+
+*glib-2.20.5 (01 Sep 2009)
+
+  01 Sep 2009; Romain Perier <mrpouet@gentoo.org>
+  +glib-2.20.5.ebuild:
+  Version bump, 4 bugfixes, 2 translations updates.
 
 *glib-2.20.4 (09 Jul 2009)
 
